# human-hand-detect

./: LICENSE  README.md  pyproject.toml  requirements.txt
docs/: mediapipe_setup.md  yolo_setup.md
src/humanhanddetect/: cli.py  config_parser.py  logging_utils.py  video_capture.py
